# data.ml-recommender

./: .gitignore  README.md  group_aggregation_functions.py  group_aggregation_pipeline.py  main.py  metric_functions.py  pyproject.toml  recommender.py
Recommender/: __main__.py  group_aggregation_functions.py  group_aggregation_pipeline.py  main.py  metric_functions.py  recommender.py  sequence.py  sequence_pipeline.py  similarity_functions.py
